@@ -4,28 +4,23 @@ import lombok.RequiredArgsConstructor;
 import org.example.haso.global.auth.JwtAuthenticationFilter;
 import org.example.haso.global.auth.JwtExceptionFilter;
 import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.ComponentScan;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.Http403ForbiddenEntryPoint;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
-import org.springframework.security.config.http.SessionCreationPolicy;
-
-import java.util.Arrays;
+import org.springframework.web.cors.CorsConfigurationSource;
 import java.util.List;
+import java.util.Arrays;
 
 
 @Configuration
-//@ComponentScan(basePackages = "org.example.haso.global.auth")
+@ComponentScan(basePackages = "org.example.haso.global.auth")
 @EnableWebSecurity
 @RequiredArgsConstructor
 public class SecurityConfig {
@@ -36,10 +31,8 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-//                .csrf(csrf -> csrf.disable())
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .csrf(csrf -> csrf.disable())
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .requestMatchers("/member/signup", "/member/signin", "/member/refresh", "/member/validate").permitAll()
                         .anyRequest().authenticated()  // 나머지 경로는 인증 필요
                 )
@@ -51,20 +44,26 @@ public class SecurityConfig {
     }
 
 
+//    // CORS 설정
+//    @Bean
+//    public CorsConfigurationSource corsConfigurationSource() {
+//        CorsConfiguration corsConfig = new CorsConfiguration();
+//        corsConfig.setAllowedOrigins(Arrays.asList("http://localhost:8345", "https://port-0-haso-server-m70dmespb703c228.sel4.cloudtype.app"));
+//        corsConfig.setAllowedMethods(Arrays.asList("POST", "GET", "OPTIONS"));
+//        corsConfig.setAllowedHeaders(Arrays.asList("*"));
+//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//        source.registerCorsConfiguration("/**", corsConfig);
+//        return source;
+//    }
+
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:8345",
-                "https://port-0-haso-server-m70dmespb703c228.sel4.cloudtype.app"
-        ));
-//        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-//        configuration.setAllowedOriginPatterns(List.of("*"));
-        configuration.setAllowedMethods(List.of("*")); // 모든 HTTP 메서드 허용
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setAllowCredentials(true); // 인증 정보 포함 허용
-
+        configuration.addAllowedOriginPattern("*"); // 모든 도메인 허용
+        configuration.setAllowedMethods(Arrays.asList("*")); // 모든 HTTP 메서드 허용
+        configuration.setAllowedHeaders(Arrays.asList("*")); // 모든 헤더 허용
+        configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
@@ -81,4 +80,3 @@ public class SecurityConfig {
 
 
 }
-
